test_scores/negative_dimers/features/Q15645.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q15645.pkl.xz